--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <!-- Navigation Bar -->
     <nav>
-        <a href="Menu.html">Menu</a>
-         <a href="AboutUs.html">About Us</a>
-        <a href="ContactInfo.html">Contact</a>
-        <a href="Locations.html">Locations</a>
+        <a href="Home.html">Menu</a>
+         <a href="About.html">About Us</a>
+        <a href="Blog.html">Contact</a>
+        <a href="Contact.html">Locations</a>
     </nav>
      <!-- Main Content -->
      <main>
