--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <!-- Navigation Bar -->
     <nav>
-        <a href="Home.html">Menu</a>
-         <a href="About.html">About Us</a>
-        <a href="Blog.html">Contact</a>
-        <a href="Contact.html">Locations</a>
+        <a href="Home.html">Home</a>
+         <a href="About.html">About</a>
+        <a href="Blog.html">Blog</a>
+        <a href="Contact.html">Contact</a>
     </nav>
      <!-- Main Content -->
      <main>
