--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <nav>
         <a href="Home.html">Home</a>
          <a href="About.html">About</a>
+        <a href="Dashboard.html">Dashboard</a>
         <a href="Blog.html">Blog</a>
         <a href="Contact.html">Contact</a>
     </nav>
