--- a/Dashboard.html
+++ b/Dashboard.html
@@ -4,26 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
-  <link rel="stylesheet" href="DashDesign.css">
+  <link rel="stylesheet" href="design.css">
 </head>
 <body>
-    <header>
-            <!-- Header Section -->
-        <h1> Welcome to My Web Design Blog </h1>
-        <p> Sharing knowledge about web design, HTML5, CSS, and JavaScript</p>
-    </header> 
+  <header>
+    <h1> Welcome to My Web Design Blog </h1>
+    <p> Sharing knowledge about web design, HTML5, CSS, and JavaScript</p>
+</header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="About.html">About</a>
+    <a href="Dashboard.html">Dashboard</a>
+    <a href="Blog.html">Blog</a>
+    <a href="Contact.html">Contact</a>
+  </nav>
+  <div class="sidebar">
+    <a href="Contact.html">Contact</a>
+  </div>
 
-        <!-- Navigation Bar -->
-        <nav>
-            <a href="index.html">Home</a>
-             <a href="About.html">About</a>
-            <a href="Dashboard.html">Dashboard</a>
-            <a href="Blog.html">Blog</a>
-            <a href="Contact.html">Contact</a>
-        </nav> 
+  <div class="main-content">
+    
+    </header>
 
-  <div class="container">
-    <div class="dashboard">
+    <div class="grid-container">
       <div class="dashboard-item">Item 1</div>
       <div class="dashboard-item">Item 2</div>
       <div class="dashboard-item">Item 3</div>
@@ -34,17 +37,10 @@
       <div class="dashboard-item">Item 8</div>
       <div class="dashboard-item">Item 9</div>
     </div>
-    
-    <div class="extra-info">
-      <div class="reports-box">
-        <h3>Reports</h3>
-        <p>Content for reports here</p>
-      </div>
-      <div class="subscription-box">
-        <h3>Subscription</h3>
-        <p>Content for subscription here</p>
-      </div>
-    </div>
-  </div>
-</body>
+
+      <!-- footer Section -->
+      <footer>
+        <p>&copy; 2025 My Blog. All rights reserved</p>
+      </footer>
 </html>
+
