--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
 
     <!-- Navigation Bar -->
     <nav>
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
          <a href="About.html">About</a>
         <a href="Dashboard.html">Dashboard</a>
         <a href="Blog.html">Blog</a>
         <a href="Contact.html">Contact</a>
+        <a href="Semantics.html">Semantics</a>
     </nav>
+    
      <!-- Main Content -->
      <main>
          <!-- Blog Section -->
@@ -60,4 +62,5 @@
       </footer>
 </body> 
 </html>
+
 
