--- a/Dashboard.html
+++ b/Dashboard.html
@@ -14,7 +14,6 @@
   <nav>
     <a href="index.html">Home</a>
     <a href="About.html">About</a>
-    <a href="Dashboard.html">Dashboard</a>
     <a href="Blog.html">Blog</a>
     <a href="Contact.html">Contact</a>
   </nav>
@@ -27,15 +26,15 @@
     </header>
 
     <div class="grid-container">
-      <div class="dashboard-item">Item 1</div>
-      <div class="dashboard-item">Item 2</div>
-      <div class="dashboard-item">Item 3</div>
-      <div class="dashboard-item">Item 4</div>
-      <div class="dashboard-item">Item 5</div>
-      <div class="dashboard-item">Item 6</div>
-      <div class="dashboard-item">Item 7</div>
-      <div class="dashboard-item">Item 8</div>
-      <div class="dashboard-item">Item 9</div>
+      <div class="grid-item">Item 1</div>
+      <div class="grid-item">Item 2</div>
+      <div class="grid-item">Item 3</div>
+      <div class="grid-item">Item 4</div>
+      <div class="grid-item">Item 5</div>
+      <div class="grid-item">Item 6</div>
+      <div class="grid-item">Item 7</div>
+      <div class="grid-item">Item 8</div>
+      <div class="grid-item">Item 9</div>
     </div>
 
       <!-- footer Section -->
@@ -43,4 +42,5 @@
         <p>&copy; 2025 My Blog. All rights reserved</p>
       </footer>
 </html>
+
 
