--- a/Dashboard.html
+++ b/Dashboard.html
@@ -24,17 +24,16 @@
   <div class="main-content">
     
     </header>
-
     <div class="grid-container">
-      <div class="grid-item">Item 1</div>
-      <div class="grid-item">Item 2</div>
-      <div class="grid-item">Item 3</div>
-      <div class="grid-item">Item 4</div>
-      <div class="grid-item">Item 5</div>
-      <div class="grid-item">Item 6</div>
-      <div class="grid-item">Item 7</div>
-      <div class="grid-item">Item 8</div>
-      <div class="grid-item">Item 9</div>
+      <div class="dashboard-item">Item 1</div>
+      <div class="dashboard-item">Item 2</div>
+      <div class="dashboard-item">Item 3</div>
+      <div class="dashboard-item">Item 4</div>
+      <div class="dashboard-item">Item 5</div>
+      <div class="dashboard-item">Item 6</div>
+      <div class="dashboard-item">Item 7</div>
+      <div class="dashboard-item">Item 8</div>
+      <div class="dashboard-item">Item 9</div>
     </div>
 
       <!-- footer Section -->
@@ -42,5 +41,4 @@
         <p>&copy; 2025 My Blog. All rights reserved</p>
       </footer>
 </html>
-
 
