--- a/Dashboard.html
+++ b/Dashboard.html
@@ -15,7 +15,7 @@
     <a href="index.html">Home</a>
     <a href="About.html">About</a>
     <a href="Blog.html">Blog</a>
-    <a href="Contact.html">Contact</a>
+    <a href="Semantics.html">About Me</a>
   </nav>
   <div class="sidebar">
     <a href="Contact.html">Contact</a>
@@ -41,4 +41,5 @@
         <p>&copy; 2025 My Blog. All rights reserved</p>
       </footer>
 </html>
+
 
