--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     <!-- Navigation Bar -->
     <nav>
         <a href="index.html">Home</a>
-         <a href="About.html">About</a>
         <a href="Dashboard.html">Dashboard</a>
         <a href="Blog.html">Blog</a>
         <a href="Contact.html">Contact</a>
-        <a href="Semantics.html">Semantics</a>
+        <a href="Semantics.html">About Me</a>
     </nav>
     
      <!-- Main Content -->
@@ -48,10 +47,11 @@
             <p> Hello! Im a adamson student starting on webdesign and passionate about front-end development.</p>
 
             <h3> Popular Topics</h3>
-            <ul>
+            <ul class="menu">
                 <li><a href="#"> HTML & CSS Basics</a></li>
                 <li><a href="#">JavaScript Fundementals</a></li>
                 <li><a href="#">responsive webdesign</a></li>
+                <li><a href="#">A innovative way to run C#</a></li>
             </ul>
           </aside>
      </main>
@@ -62,5 +62,7 @@
       </footer>
 </body> 
 </html>
+
+
 
 
