--- a/Dashboard.html
+++ b/Dashboard.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1> Welcome to My Web Design Blog </h1>
+    <h1> Welcome to My Web Design Blog </h1>.
     <p> Sharing knowledge about web design, HTML5, CSS, and JavaScript</p>
 </header>
   <nav>
@@ -41,5 +41,4 @@
         <p>&copy; 2025 My Blog. All rights reserved</p>
       </footer>
 </html>
-
 
